syntax = "proto3";

package  messageIdG;

option go_package = "/messageId";

option csharp_namespace = "messageIdG";

//定义Message消息的id
enum MessageId{

  None = 0;
  //CS: C-->S
  //SC: S-->C

  //用户创建
  CSCreatePlayer = 50001;
  SCCreatePlayer = 50002;

  //客户端登录请求
  CSLogin = 50003;
  //服务器响应登录请求
  SCLogin = 50004;

  //player
  //添加好友
  CSAddFriend = 100001;
  SCAddFriend = 100002;
  //删除好友
  CSDelFriend = 100003;
  SCDelFriend = 100004;
  //聊天包
  CSSendChatMsg = 100005;
  SCSendChatMsg = 100006;

  ClientRequestObjectSync = 200010;
  ServerRequestObjectSync = 200011;
  ServerRequestObjectSyncComplete = 200012;
  Instantiate = 200020;
  Destroy = 200021;
  DestroyNetworkObjects = 200022;
  SyncTransform = 200030;

}